Add a workaround for boolean operations on shapes

The problem is that Qt's path boolean operation do not support curves,
therefore all the curves are converted into lines
(see QPathSegments::addPath()). The curves are split into lines using
absolute size of the curve for the threshold. Therefore, when applying
boolean operations we should convert them into 'image pixel' coordinate
space first.

BUG:411056